[package]
name = "argrs"
version = "0.1.0"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "A simple program to list the arguments passed on the command line."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
